--- a/FinSmart/package.json
+++ b/FinSmart/package.json
@@ -13,6 +13,7 @@
     "components": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "styled": "^1.0.0",
