--- a/FinSmart/package.json
+++ b/FinSmart/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "components": "^0.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-google-fonts": "^1.2.1",
     "react-hook-form": "^7.51.2",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
