--- a/FinSmart/package.json
+++ b/FinSmart/package.json
@@ -12,16 +12,20 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "components": "^0.1.0",
+    "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-fonts": "^1.2.1",
     "react-hook-form": "^7.51.2",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "styled": "^1.0.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
