--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "components": "^0.1.0",
+    "icons": "^1.0.0",
     "moment": "^2.30.1",
     "primereact": "^10.6.3",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
@@ -26,6 +27,7 @@
     "react-dropdown": "^1.11.0",
     "react-google-fonts": "^1.2.1",
     "react-hook-form": "^7.51.2",
+    "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-number-format": "^5.4.0",
     "react-router-dom": "^6.22.3",
@@ -33,7 +35,8 @@
     "styled": "^1.0.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.1.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
