--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "deploy": "gh-pages -d build",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "components": "^0.1.0",
+    "gh-pages": "^6.1.1",
     "icons": "^1.0.0",
     "moment": "^2.30.1",
     "primereact": "^10.6.3",
