--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "deploy": "gh-pages -d build",
-  "homepage": "https://Knirag/FinSmart",
+  "homepage": "https://Knirag/FinSmart-",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
