--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "components": "^0.1.0",
+    "dotenv": "^16.4.5",
     "gh-pages": "^6.1.1",
     "icons": "^1.0.0",
     "moment": "^2.30.1",
@@ -33,7 +34,7 @@
     "react-modal": "^3.16.1",
     "react-number-format": "^5.4.0",
     "react-router-dom": "^6.22.3",
-    "react-tooltip": "^5.26.4",
+    "react-tooltip": "^5.27.1",
     "styled": "^1.0.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.1.4",
